FIx padding on tablets for multicolumn section

--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -125,13 +125,6 @@
   }
 }
 
-@media screen and (min-width: 750px) and (max-width: 989px) {
-  .multicolumn-list:not(.slider) {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-}
-
 @media screen and (min-width: 750px) {
   .multicolumn-list.slider {
     padding: 0;
